fixed issues with logic

--- a/auto-gitlab-backup.conf.sample
+++ b/auto-gitlab-backup.conf.sample
@@ -3,6 +3,8 @@ remoteServer="" #remote host
 remoteDest="" #remote path
 sshKeyPath="" #path to an alternate ssh key, if needed.
 remotePort=22 # ssh port
+## Only change the below setting if you have git's home in a different location
+gitHome="/home/git"
 ## only use the below settings if your destination is using rsync in daemon mode
 remoteModule=""
 rsync_password_file=""
