--- a/auto-gitlab-backup.conf.sample
+++ b/auto-gitlab-backup.conf.sample
@@ -5,6 +5,9 @@ sshKeyPath="" #path to an alternate ssh key, if needed.
 remotePort=22 # ssh port
 ## Only change the below setting if you have git's home in a different location
 gitHome="/home/git"
+## only set below if rvm is in use and you need to source the rvm env file
+# echo $(rvm env --path)
+RVM_envPath=""
 ## only use the below settings if your destination is using rsync in daemon mode
 remoteModule=""
 rsync_password_file=""
