--- a/auto-gitlab-backup.conf.sample
+++ b/auto-gitlab-backup.conf.sample
@@ -2,7 +2,7 @@ remoteUser="" #user account on remote server
 remoteServer="" #remote host
 remoteDest="" #remote path
 sshKeyPath="" #path to an alternate ssh key, if needed.
-remotePort=22 # ssh port
+remotePort=22 # ssh port or 873 for rsyncd port
 ## Only change the below setting if you have git's home in a different location
 gitHome="/home/git"
 ## only set below if rvm is in use and you need to source the rvm env file
